# ai-data-extractor

./: Cargo.toml  README.md  output.txt
src/: main.rs
